clusters/milkyway/apps/homer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: homer-ingress
spec:
 ingressClassName: public
 tls:
 - hosts:
   - home.milkyway.cboxlab.com
   secretName: homer-tls-secret
 rules:
 - host: home.milkyway.cboxlab.com
   http:
     paths:
     - backend:
         service:
           name: homer
           port:
             name: http
       path: /
       pathType: Prefix
